# orinode-lm

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
configs/_base/: data.yaml  model.yaml  training.yaml
configs/data/: afrispeech_200.yaml  bibletts.yaml  common_voice_nigerian.yaml  crowdsourced_cs.yaml  mix_manifest.yaml  naijavoices.yaml
configs/eval/: asr_code_switched.yaml  asr_monolingual.yaml  instruction_following.yaml
configs/model/: adapter.yaml  decoder_gemma2_9b.yaml  decoder_llama31_8b.yaml  whisper_encoder.yaml
configs/training/: aux_emotion_classifier.yaml  aux_gender_classifier.yaml  stage1_encoder_adapt.yaml  stage1_mini.yaml  stage2_joint_asr.yaml  stage3_speech_llm.yaml  stage4_instruct.yaml
configs/training/pre_4090_backup/: stage1_encoder_adapt.original.yaml
docs/: API.md  AUX_MODELS.md  training_stages.md
scripts/data/: apply_pass3_cer_from_cache.py  build_manifests.py  download_afrispeech.py  download_bibletts.py  download_common_voice.py  download_naijavoices.py  enforce_speaker_disjoint.py  merge_speaker_ids.py  prepare_emotion_labels.py  refetch_speaker_ids.py  validate_diacritics.py
scripts/deploy/: download_afrispeech_nigeria.py  generate_ui_credentials.sh  link_datasets.sh  vps_bootstrap.sh
scripts/eval/: build_leaderboard.py  compare_step_wer.py  diag1_regression.py  diag2_distribution.py  diag_full.py  diag_step_compare.py  filtered_eval.py  run_asr_eval.sh  run_cs_eval.sh  run_eval.py
scripts/monitor/: telegram_progress.py
scripts/train/: launch_stage1.sh  launch_stage2.sh  launch_stage3.sh  launch_stage4.sh
scripts/ui/: build_frontend.sh  dev.sh
src/orinode/: __init__.py  paths.py
src/orinode/data/: Makefile  __init__.py  augmentation.py  datasets.py  diacritics.py  filtering.py  manifests.py  mixing.py  preprocessing.py  stage1_encoder.py  text_normalization.py  tokenization.py  whisper_collator.py  whisper_dataset.py
src/orinode/eval/: __init__.py  wer.py
src/orinode/inference/: __init__.py  emotion_pipeline.py  gender_pipeline.py  transcribe.py
src/orinode/models/: __init__.py  adapter.py  emotion_classifier.py  gender_classifier.py  lora_utils.py  losses.py  speech_llm.py  whisper_encoder.py
src/orinode/training/: __init__.py  callbacks.py  stage1_encoder.py  stage2_joint_asr.py  stage3_speech_llm.py  stage4_instruct.py  train_emotion.py  train_gender.py  trainer.py
src/orinode/ui/: __init__.py  api.py  api_v1.py  progress_store.py  schemas.py  server.py  websocket.py
src/orinode/utils/: __init__.py  config.py  events.py  logging.py  sharding.py
tests/: conftest.py  test_api_v1.py  test_datasets.py  test_diacritics.py  test_emotion_forward.py  test_events.py  test_gender_forward.py  test_mixing.py  test_model_forward.py  test_ui_api.py  test_ui_auth.py  test_wer.py
tests/fixtures/: test_events.jsonl  test_manifest.jsonl
ui/frontend/: index.html  package-lock.json  package.json  vite.config.ts
ui/frontend/src/: App.tsx  api.ts  api_v1.ts  types.ts
ui/frontend/src/components/: AudioInput.tsx  AudioInputArea.tsx  AudioRecorder.tsx  CodeBlock.tsx  EmotionResult.tsx  FeedbackWidget.tsx  GenderResult.tsx  LanguageBadge.tsx  Layout.tsx  LossChart.tsx  PreviewBadge.tsx  RunCard.tsx
ui/frontend/src/hooks/: useRuns.ts  useWebSocket.ts
(+12 files in other folders)
